# xdg-desktop-portal-phosh

./: .gitignore  .gitlab-ci.yml  Cargo.toml  NEWS  README.md  meson.build  meson_options.txt
data/: meson.build  mobi.phosh.Thumbnailer.service.in  mobi.phosh.Thumbnailer.xml.in  phosh-thumbnailer.service.in  phrosh.portal.in  xdg-desktop-portal-phrosh.desktop.in.in  xdg-desktop-portal-phrosh.service.in
debian/: changelog  control  rules  xdg-desktop-portal-phosh.install  xdg-desktop-portal-phosh.manpages
doc/: meson.build  phosh-thumbnailer.rst  ptcli.rst
po/: POTFILES.in  meson.build
src/: bin_config.rs.in  fc-monitor.c  init.rs  lib.rs  lib_config.rs.in  main.rs  meson.build  message.rs  pmp-fdo-notification.c  pmp-fdo-notification.h  pmp-file-chooser.c  pmp-file-chooser.h  pmp-notification.c  pmp-notification.h  pmp-wallpaper-dialog.c  pmp-wallpaper-dialog.h  pmp-wallpaper-preview.c  pmp-wallpaper-preview.css  pmp-wallpaper-preview.ui  pmp-wallpaper.c  request.rs  requester.rs  responder.rs  utils.rs  xdg-desktop-portal-phosh.c  xdg-desktop-portal-phrosh.gresource.xml
src/requesters/: account.rs  app_chooser.rs  file_chooser.rs  mod.rs
src/responders/: account_window.rs  file_chooser.rs  mod.rs
src/responders/app_chooser/: app_chooser_row.rs  app_chooser_window.rs  mod.rs
src/thumbnailer/: application.c  application.h  cli.c  meson.build  service.c
src/ui/: account_window.ui  app_chooser_row.ui  app_chooser_window.ui
subprojects/: pfs.wrap
