[package]
name = "xdg-desktop-portal-phosh"
version = "0.1.0"
edition = "2021"

[dependencies.adw]
features = ["v1_5"]
package = "libadwaita"
version = "0.7.2"

[dependencies.ashpd]
features = ["backend", "gtk4_wayland", "gtk4_x11"]
git = "https://github.com/bilelmoussaoui/ashpd.git"
rev = "c57d6f81d7240775b7c60a0ead97ee555599ead0"

[dependencies.futures_util]
package = "futures-util"
version = "0.3.31"

[dependencies.gettextrs]
features = ["gettext-system"]
package = "gettext-rs"
version = "0.7.2"

[dependencies.gtk]
features = ["gnome_47"]
package = "gtk4"
version = "0.9.6"

[dependencies.tokio]
features = ["rt-multi-thread"]
package = "tokio"
version = "1.44.2"
