[package]
name = "xdg-desktop-portal-phosh"
version = "0.1.0"
edition = "2021"

[dependencies.adw]
features = ["v1_5"]
package = "libadwaita"
version = "0.8"

[dependencies.ashpd]
features = ["backend", "gtk4_wayland", "gtk4_x11"]
git = "https://github.com/bilelmoussaoui/ashpd.git"
rev = "a18a07466ea113d74fbd73229dfb9f7bd4aed10e"

[dependencies.futures_util]
package = "futures-util"
version = "0.3"

[dependencies.gettextrs]
features = ["gettext-system"]
package = "gettext-rs"
version = "0.7"

[dependencies.gtk]
features = ["v4_18"]
package = "gtk4"
version = "0.10"

[dependencies.tokio]
features = ["rt-multi-thread"]
package = "tokio"
version = "1.46"
