[package]
name = "xdg-desktop-portal-phosh"
version = "0.50.0"
edition = "2021"

[dependencies.adw]
features = ["v1_5"]
package = "libadwaita"
version = "0.8"

[dependencies.ashpd]
features = ["backend", "gtk4_wayland", "gtk4_x11"]
version = "0.12"

[dependencies.PhoshFileSelector]
git = "https://gitlab.gnome.org/guidog/pfs.git"
rev = "e0152cd1e695f54fd6751b1d018ce5384956f6a2"

[dependencies.futures_util]
package = "futures-util"
version = "0.3"

[dependencies.gettextrs]
features = ["gettext-system"]
package = "gettext-rs"
version = "0.7"

[dependencies.gtk]
features = ["v4_18"]
package = "gtk4"
version = "0.10"

[dependencies.tokio]
features = ["rt-multi-thread"]
package = "tokio"
version = "1.46"
